--- a/Project.bib
+++ b/Project.bib
@@ -22,8 +22,56 @@ year = {2013}
   year={2015}
 }
 
-% 3. IBM Big Data analytics HUB,
-%www.ibmbigdatahub.com/infographic/four-vs-big-data
+@article{noSQL,
+author = {Nayak, A. and Poriya, A. and Poojary, Dikshay},
+year = {2013},
+month = {01},
+pages = {16-19},
+title = {Article: Type of nosql databases and its comparison with relational databases},
+volume = {5},
+journal = {International Journal of Applied Information Systems}
+}
+
+@article{SQL,
+title = {SQL and Data Analysis. Some Implications for Data Analysits and Higher Education},
+journal = {Procedia Economics and Finance},
+volume = {20},
+pages = {243-251},
+year = {2015},
+note = {Globalization and Higher Education in Economics and Business Administration - GEBA 2013},
+issn = {2212-5671},
+doi = {https://doi.org/10.1016/S2212-5671(15)00071-4},
+url = {https://www.sciencedirect.com/science/article/pii/S2212567115000714},
+author = {Marin Fotache and Catalin Strimbei},
+}
+
+@online{IBM,
+  author = {Alba Díaz},
+  title = {THE FOUR V’S OF BIG DATA},
+  year = 2020,
+  url = {https://opensistemas.com/en/the-four-vs-of-big-data/}
+}
+
+@inproceedings{data,
+author = {Rusu, O. and Halcu, Ionela and Grigoriu, O. and Neculoiu, Giorgian and Sandulescu, V. and Marinescu, M. and Marinescu, Viorel},
+year = {2013},
+month = {01},
+pages = {1-4},
+title = {Converting unstructured and semi-structured data into knowledge},
+isbn = {978-1-4673-6114-9},
+journal = {Proceedings - RoEduNet IEEE International Conference},
+doi = {10.1109/RoEduNet.2013.6511736}
+}
+
+@article{dcomp,
+author = {Khan, Rafiqul Zaman},
+year = {2015},
+month = {06},
+pages = {2630-2635},
+title = {Distributed Computing: An Overview},
+volume = {07},
+journal = {Int. J. Advanced Networking and Applications}
+}
 
 @article{Ghazi15,
 author = {Ghazi, Mohd and Gangodkar, Durgaprasad},
@@ -36,6 +84,15 @@ journal = {Procedia Computer Science},
 doi = {10.1016/j.procs.2015.04.108}
 }
 
+@article{HDFS,
+author = {Sajwan, Vineet and Yadav, Varnita and Haider, M.},
+year = {2015},
+month = {05},
+pages = {2321-2241},
+title = {The Hadoop Distributed File System: Architecture and Internals},
+volume = {pISSN}
+}
+
 @inproceedings{Dean04,
 author = {Dean, Jeffrey and Ghemawat, Sanjay},
 year = {2004},
@@ -46,6 +103,26 @@ volume = {51},
 journal = {Communications of the ACM},
 doi = {10.1145/1327452.1327492}
 }
+
+@article{Stream11,
+author = {Ding, Mengwei and Zheng, Long and Lu, Yanchao and Li, Li and Guo, Song},
+year = {2011},
+month = {11},
+pages = {},
+title = {More convenient more overhead: The performance evaluation of Hadoop streaming},
+journal = {Proceedings of the 2011 ACM Research in Applied Computation Symposium, RACS 2011},
+doi = {10.1145/2103380.2103444}
+}
+
+@online{JAR,
+  author = {Apache Software Foundation},
+  title = {MapReduce Tutorial},
+  year = 2020,
+  url = {https://hadoop.apache.org/docs/current/hadoop-mapreduce-client/hadoop-mapreduce-client-core/MapReduceTutorial.html}
+}
+
+@Manual{HMR,    title = {hmr: High-Performance Hadoop Map/Reduce R Interface},    author = {Simon Urbanek and Taylor Arnold},    year = {2020},    note = {R package version 1.2-0},    url = {http://www.rforge.net/hmr},  }
+
 
 @article{iotools,
 author = {Arnold, Taylor and Kane, Michael and Urbanek, Simon},
@@ -74,6 +151,21 @@ booktitle	= {Proceedings of the 19th ACM Symposium on Operating  Systems Princip
 pages	= {20--43},
 address	= {Bolton Landing, NY}
 }
+
+@article{IO17,
+  title={iotools: High-Performance I/O Tools for R},
+  author={Taylor Arnold and M. Kane and Simon Urbanek},
+  journal={R J.},
+  year={2017},
+  volume={9},
+  pages={6}
+}
+
+
+
+
+
+
 
 
 
