--- a/Project.bib
+++ b/Project.bib
@@ -45,11 +45,11 @@ url = {https://www.sciencedirect.com/science/article/pii/S2212567115000714},
 author = {Marin Fotache and Catalin Strimbei},
 }
 
-@online{IBM,
+@misc{IBM,
   author = {Alba Díaz},
   title = {THE FOUR V’S OF BIG DATA},
   year = 2020,
-  url = {https://opensistemas.com/en/the-four-vs-of-big-data/}
+  howpublished = {\url{https://opensistemas.com/en/the-four-vs-of-big-data/}}
 }
 
 @inproceedings{data,
@@ -61,6 +61,17 @@ title = {Converting unstructured and semi-structured data into knowledge},
 isbn = {978-1-4673-6114-9},
 journal = {Proceedings - RoEduNet IEEE International Conference},
 doi = {10.1109/RoEduNet.2013.6511736}
+}
+
+@article{Para,
+author = {Navarro, Cristobal and Hitschfeld, Nancy and Mateu, Luis},
+year = {2013},
+month = {09},
+pages = {285-329},
+title = {A Survey on Parallel Computing and its Applications in Data-Parallel Problems Using GPU Architectures},
+volume = {15},
+journal = {Communications in Computational Physics},
+doi = {10.4208/cicp.110113.010813a}
 }
 
 @article{dcomp,
@@ -114,14 +125,20 @@ journal = {Proceedings of the 2011 ACM Research in Applied Computation Symposium
 doi = {10.1145/2103380.2103444}
 }
 
-@online{JAR,
-  author = {Apache Software Foundation},
+@misc{JAR,
+  author = {{Apache Software Foundation}},
   title = {MapReduce Tutorial},
   year = 2020,
-  url = {https://hadoop.apache.org/docs/current/hadoop-mapreduce-client/hadoop-mapreduce-client-core/MapReduceTutorial.html}
+  howpublished = {\url{https://hadoop.apache.org/docs/current/hadoop-mapreduce-client/hadoop-mapreduce-client-core/MapReduceTutorial.html}}
 }
 
-@Manual{HMR,    title = {hmr: High-Performance Hadoop Map/Reduce R Interface},    author = {Simon Urbanek and Taylor Arnold},    year = {2020},    note = {R package version 1.2-0},    url = {http://www.rforge.net/hmr},  }
+@Manual{HMR,
+    title = {hmr: High-Performance Hadoop Map/Reduce R Interface},
+    author = {Simon Urbanek and Taylor Arnold},
+    year = {2020},
+    note = {R package version 1.2-0},
+    url = {http://www.rforge.net/hmr},
+  }
 
 
 @article{iotools,
